# OperationSquirrel

./: .gitignore  Dockerfile  LICENSE  README.md  Setting-up-the-workflow.md  docker-compose.debug.yml
camStuff/: README.md
jupyter/: README.md
notCode/: README.md
python/: README.md
scratch_code/comp-code/: Makefile  README.md  data.csv  data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  main.cpp  mavlink_command_handler.cpp  mavlink_command_handler.h  mavlink_msg_handler.cpp  mavlink_msg_handler.h  mavlink_print_info.cpp  serial_port_handler.cpp  serial_port_handler.h  sim_flight_test_2_setAttitudeTarget.h  standard_libs.h
scratch_code/comp-tcp/: Makefile copy  README copy.md  README.md  command_mavlink.cpp  command_mavlink.h  data.csv  data_1.csv  global_calibrations.h  global_objects.cpp  global_objects.h  handle_msg_mavlink.cpp  handle_msg_mavlink.h  handle_serial_port.cpp  handle_serial_port.h  main.cpp  mavlink_command_handler.h  mavlink_msg_handler.cpp  mavlink_msg_handler.h  print_mavlink.h  serial_port_handler.cpp  serial_port_handler.h  sim_flight_test_1.h  standard_libs.h
scratch_code/comp-uart/: command_mavlink.h  global_calibrations.h  global_objects.cpp  global_objects.h  globlal_calibrations.cpp  handle_msg_mavlink.h  handle_serial_port.cpp  main.cpp  mavlink_command_handler.cpp  mavlink_msg_handler.cpp  mavlink_print_info.cpp  mavlink_print_info.h  serial_port_handler.cpp  serial_port_handler.h  sim_flight_test_1.h  standard_libs.h  time_calc.cpp  time_calc.h
scratch_code/mavlink2_example/: Makefile  README.md  command_mavlink.cpp  command_mavlink.h  global_objects.cpp  handle_msg_mavlink.cpp  handle_msg_mavlink.h  handle_serial_port.h  main.cpp  mavlink2_example.cpp  print_commands.txt  print_mavlink.cpp  print_mavlink.h
scratch_code/opencv-example/: Makefile  camera_handler.cpp  camera_handler.h  main  main.cpp
scratch_code/sitl_example_TCP_WSL2/: Makefile  README.md  sitl_example_TCP.cpp
scratch_code/sitl_example_UART_WSL2/: Makefile  sitl_example_UART.cpp
scratch_code/sitl_example_UDP_WSL2/: Makefile  README.md  sitl_example_UDP.cpp
scratch_containers/: Dockerfile.jetpack  Dockerfile_long  Makefile  README.md  simple_camera.cpp
scratch_containers/hello_world/: Dockerfile
scratch_containers/hello_world/container_src/: CMakeLists.txt
scratch_containers/jeston-nano-base-jetson-inference/: Dockerfile
scratch_containers/jeston-nano-base-jetson-inference/misc/helloworld/: CMakeLists.txt  main.cpp
scratch_containers/jetson-inference-base/: Dockerfile  README.md
scratch_containers/jetson-nano-base-attilla/: Dockerfile  README.md
scratch_containers/jetson-nano-base-l4t/: Makefile  README.md
scratch_containers/jetson-nano-base-r35.1.0/: Dockerfile  README.md  README_COMPILE.txt
scratch_containers/jetson-nano-base-r35.1.0/container_src/: CMakeLists.txt
scratch_containers/jetson-nano-dev-attilla/: Makefile  README.md  build.sh
scratch_containers/jetson-nano-dev-r35.1.0/: Dockerfile.jetpack  README.md
shaunStuff/: OperationSquirrel.code-workspace  README.md
shaunStuff/helloworld2_cpp_cmake/: CMakeLists.txt  Dockerfile  main.cpp
shaunStuff/helloworld_cpp_cmake/: .Dockerfile.swp  CMakeLists.txt  Dockerfile  HOWTO.MD
shaunStuff/simple_camera/: CMakeLists.txt
(+25 files in other folders)
